--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
 		"angularLocalStorage": "latest",
 		"angular-ui-router": "latest",
 		"angular-poller": "latest",
-		"angular-resource": "latest"
+		"angular-resource": "latest",
+		"angular-socket-io": "latest"
 	}
 }
