added socket.io-client to bower

--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
 		"angular-ui-router": "latest",
 		"angular-poller": "latest",
 		"angular-resource": "latest",
-		"angular-socket-io": "latest"
+		"angular-socket-io": "latest",
+		"socket.io-client": "latest"
 	}
 }
