--- a/bower.json
+++ b/bower.json
@@ -13,5 +13,6 @@
 		"angular-resource": "latest",
 		"angular-socket-io": "latest",
 		"socket.io-client": "latest",
+		"ng-draggable":"latest"
 	}
 }
